Pedelec Server/k8s/pedelec-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedelec-ingress
  namespace: ga58roj # Hardcoded namespace - change this to your own namespace!
spec:
  rules:
  - host: example.pedelec.k8s-dev.ase.cit.tum.de # Adapt
    http:
      paths:
      - pathType: Prefix
        path: "/pedelec"
        backend:
          service:
            name: pedelec-reservation-service
            port:
              number: 80
      - pathType: Prefix
        path: "/reservation"
        backend:
          service:
            name: pedelec-reservation-service
            port:
              number: 80
      - pathType: Prefix
        path: "/locations"
        backend:
          service:
            name: pedelec-location-service
            port:
              number: 80
      - pathType: Prefix
        path: "/damage"
        backend:
          service:
            name: pedelec-damage-service
            port:
              number: 80
